--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ transition: transform 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 /* --- Blog Post Layout Enhancements --- */
-main {
+.blog-main {
   background: #fff;
   max-width: 780px;
   margin: 3rem auto;
@@ -456,10 +456,10 @@ article img {
 }
 
 @media (max-width: 900px) {
-  main {
+  .blog-main {
     padding: 1.3rem .6rem;
   }
-  article img {
+ .blog-main  article img {
     float: none;
     margin: 0 auto 1.1rem auto;
     display: block;
@@ -472,7 +472,7 @@ article img {
   header h1 {
     font-size: 1.5rem;
   }
-  article img {
+ .blog-main  article img {
     width: 100% !important;
     max-width: 96vw;
   }
@@ -507,6 +507,7 @@ blockquote, .quote {
   font-size: 1.08rem;
   font-family: 'Georgia', serif;
 }
+
 
 
 
