--- a/css/gallery.css
+++ b/css/gallery.css
@@ -181,7 +181,27 @@
   box-shadow: 0 0 8px 2px rgba(0,0,0,0.20);
   transform: scale(1.1);
 }
-
+#pictures {
+  padding: 20px;
+}
+.picture-gallery {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.picture-gallery img {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+.picture-gallery img:hover {
+  transform: scale(1.05);
+}
 /* Responsive for Gallery */
 @media (max-width: 768px) {
   .capturesque {
