--- a/css/layout.css
+++ b/css/layout.css
@@ -23,6 +23,10 @@ header nav {
   justify-content: center;
   align-items: center;
   min-height: 60px;
+   position: sticky;
+  top: 0;
+  z-index: 99; /* stay above other content */
+}
 }
 
 header nav a {
